# silver

./: .gitignore  .merlin  Makefile  README.md  _tags  dune-project  silver  silver.opam
examples/: basic.ag  coinflip.ag  failure.ag  illustrative.ag  noisysum.ag  response.ag  rnm.ag
examples/tests/: assignments.ag  while.ag
lib/: dune
lib/automata/: DFA.ml  automata.ml  program.ml
lib/core/: SMT.ml  dune  operation.ml  types.ml
lib/logic/: constraint.ml  simplify.ml  static.ml  theory.ml
lib/proof/: check.ml  delta.ml  dune  interpolant.ml  probability.ml  trace.ml
lib/search/: dune  generalize.ml  history.ml  merge.ml
lib/synth/: substitution.ml  synth.ml
src/: silver.ml
src/automata/: DFA.ml  abstraction.ml  automata.ml  cost.ml  dune  graph.ml  program.ml
src/core/: AST.ml  SMT.ml  dune  global.ml  name.ml  operation.ml  rational.ml  solver.ml  value.ml
src/logic/: cata.ml  constraint.ml  dune  encoding.ml  evaluation.ml  operation.ml  simplify.ml  static.ml  types.ml
src/parse/: dune  lexer.mll  parse.ml  parser.mly
src/parser/: AST.ml  lexer.mll  operation.ml  parse.ml  parser.mly  utility.ml
src/proof/: axiom.ml  check.ml  disjunction.ml  dune  encoding.ml  interpolant.ml  merge.ml  probability.ml  theory.ml  trace.ml
src/search/: check.ml  generalize.ml  history.ml  merge.ml
src/synth/: dune  grammar.ml  substitution.ml  synth.ml
